--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "todo_app",
   "version": "0.1.0",
-  "homepage": "https://prajwal18.github.io/Todo-Application/",
+  "homepage": "https://prajwal18.github.io/Todo-Application",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
